--- a/Extract-Transform_final_code.ipynb
+++ b/Extract-Transform_final_code.ipynb
@@ -290,92 +290,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Export the DataFrame as a CSV file using encoding='utf8'.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Deliverable 1: Extract\n",
-    "----\n",
-    "### Option 2: Use regex \n",
-    "\n",
-    "1. Import the `backer_info.csv` file into a DataFrame. \n",
-    "2. Extract the \"backer_id\", \"cf_id\", \"name\", and \"email using regular expressions.\"\n",
-    "3. Create a new DataFrame with the retrieved data.\n",
-    "4. Export the DataFrame as `backers_data.csv`."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Get the backers_info from the crowdfunding_info sheet. \n",
-    "pd.set_option('max_colwidth', 400)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Extract the alpha-numeric \"backer_id\" from the backer_info column using a regex expression \n",
-    "# and add it as a new column called \"backer_id\".\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Extract the two to four-digit \"cf_id\" number from the backer_info column. \n",
-    "# and add it as a new column called \"cf_id\".\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Extract the name from the backer_info column and add it as a new column called \"name\".\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Extract the email from the backer_info column and add it as a new column called \"email\".\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create a new DataFrame with the appropriate columns.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Export the DataFrame as a CSV file using encoding='utf8'.\n"
+    "# Export the DataFrame as a CSV file using encoding='utf8'.\n",
+    "backers_df.to_csv(\"backer_df_info.csv\", index=False, encoding=\"utf8\")"
    ]
   },
   {
@@ -392,11 +312,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 8175 entries, 0 to 8174\n",
+      "Data columns (total 4 columns):\n",
+      " #   Column     Non-Null Count  Dtype \n",
+      "---  ------     --------------  ----- \n",
+      " 0   backer_id  8175 non-null   object\n",
+      " 1   cf_id      8175 non-null   int64 \n",
+      " 2   name       8175 non-null   object\n",
+      " 3   email      8175 non-null   object\n",
+      "dtypes: int64(1), object(3)\n",
+      "memory usage: 255.6+ KB\n"
+     ]
+    }
+   ],
    "source": [
-    "# Check data types.\n"
+    "# Check data types.\n",
+    "backers_df.info()"
    ]
   },
   {
@@ -405,37 +344,424 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Convert cf_id to an integer if necessary.\n"
+    "# Convert cf_id to an integer if necessary."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>backer_id</th>\n",
+       "      <th>cf_id</th>\n",
+       "      <th>name</th>\n",
+       "      <th>email</th>\n",
+       "      <th>first_name</th>\n",
+       "      <th>last_name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>av166</td>\n",
+       "      <td>968</td>\n",
+       "      <td>Angelo Vincent</td>\n",
+       "      <td>avincent@live.com</td>\n",
+       "      <td>Angelo</td>\n",
+       "      <td>Vincent</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>ha127</td>\n",
+       "      <td>563</td>\n",
+       "      <td>Hubert Arnold</td>\n",
+       "      <td>harnold@yandex.com</td>\n",
+       "      <td>Hubert</td>\n",
+       "      <td>Arnold</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>lg794</td>\n",
+       "      <td>65</td>\n",
+       "      <td>Loris Goulet</td>\n",
+       "      <td>lgoulet@yandex.com</td>\n",
+       "      <td>Loris</td>\n",
+       "      <td>Goulet</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>tb566</td>\n",
+       "      <td>563</td>\n",
+       "      <td>Teodora Brunelli</td>\n",
+       "      <td>tbrunelli@outlook.com</td>\n",
+       "      <td>Teodora</td>\n",
+       "      <td>Brunelli</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>lh506</td>\n",
+       "      <td>563</td>\n",
+       "      <td>Lexie Hunt</td>\n",
+       "      <td>lhunt@live.com</td>\n",
+       "      <td>Lexie</td>\n",
+       "      <td>Hunt</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>lh382</td>\n",
+       "      <td>563</td>\n",
+       "      <td>Lambert Huber</td>\n",
+       "      <td>lhuber@live.com</td>\n",
+       "      <td>Lambert</td>\n",
+       "      <td>Huber</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>em444</td>\n",
+       "      <td>563</td>\n",
+       "      <td>Emmy Morin</td>\n",
+       "      <td>emorin@live.com</td>\n",
+       "      <td>Emmy</td>\n",
+       "      <td>Morin</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>at582</td>\n",
+       "      <td>1572</td>\n",
+       "      <td>Armonda Trani</td>\n",
+       "      <td>atrani@live.com</td>\n",
+       "      <td>Armonda</td>\n",
+       "      <td>Trani</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>id772</td>\n",
+       "      <td>1911</td>\n",
+       "      <td>Ilana Duke</td>\n",
+       "      <td>iduke@outlook.com</td>\n",
+       "      <td>Ilana</td>\n",
+       "      <td>Duke</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>lw275</td>\n",
+       "      <td>65</td>\n",
+       "      <td>Leigha Wright</td>\n",
+       "      <td>lwright@live.com</td>\n",
+       "      <td>Leigha</td>\n",
+       "      <td>Wright</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  backer_id  cf_id              name                  email first_name  \\\n",
+       "0     av166    968    Angelo Vincent      avincent@live.com     Angelo   \n",
+       "1     ha127    563     Hubert Arnold     harnold@yandex.com     Hubert   \n",
+       "2     lg794     65      Loris Goulet     lgoulet@yandex.com      Loris   \n",
+       "3     tb566    563  Teodora Brunelli  tbrunelli@outlook.com    Teodora   \n",
+       "4     lh506    563        Lexie Hunt         lhunt@live.com      Lexie   \n",
+       "5     lh382    563     Lambert Huber        lhuber@live.com    Lambert   \n",
+       "6     em444    563        Emmy Morin        emorin@live.com       Emmy   \n",
+       "7     at582   1572     Armonda Trani        atrani@live.com    Armonda   \n",
+       "8     id772   1911        Ilana Duke      iduke@outlook.com      Ilana   \n",
+       "9     lw275     65     Leigha Wright       lwright@live.com     Leigha   \n",
+       "\n",
+       "  last_name  \n",
+       "0   Vincent  \n",
+       "1    Arnold  \n",
+       "2    Goulet  \n",
+       "3  Brunelli  \n",
+       "4      Hunt  \n",
+       "5     Huber  \n",
+       "6     Morin  \n",
+       "7     Trani  \n",
+       "8      Duke  \n",
+       "9    Wright  "
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Split the \"name\" column into \"first_name\" and \"last_name\" columns.\n"
+    "# Split the \"name\" column into \"first_name\" and \"last_name\" columns.\n",
+    "backers_df[[\"first_name\",\"last_name\"]] = backers_df[\"name\"].str.split(' ', n=1, expand=True)\n",
+    "backers_df.head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>backer_id</th>\n",
+       "      <th>cf_id</th>\n",
+       "      <th>email</th>\n",
+       "      <th>first_name</th>\n",
+       "      <th>last_name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>av166</td>\n",
+       "      <td>968</td>\n",
+       "      <td>avincent@live.com</td>\n",
+       "      <td>Angelo</td>\n",
+       "      <td>Vincent</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>ha127</td>\n",
+       "      <td>563</td>\n",
+       "      <td>harnold@yandex.com</td>\n",
+       "      <td>Hubert</td>\n",
+       "      <td>Arnold</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>lg794</td>\n",
+       "      <td>65</td>\n",
+       "      <td>lgoulet@yandex.com</td>\n",
+       "      <td>Loris</td>\n",
+       "      <td>Goulet</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>tb566</td>\n",
+       "      <td>563</td>\n",
+       "      <td>tbrunelli@outlook.com</td>\n",
+       "      <td>Teodora</td>\n",
+       "      <td>Brunelli</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>lh506</td>\n",
+       "      <td>563</td>\n",
+       "      <td>lhunt@live.com</td>\n",
+       "      <td>Lexie</td>\n",
+       "      <td>Hunt</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>lh382</td>\n",
+       "      <td>563</td>\n",
+       "      <td>lhuber@live.com</td>\n",
+       "      <td>Lambert</td>\n",
+       "      <td>Huber</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>em444</td>\n",
+       "      <td>563</td>\n",
+       "      <td>emorin@live.com</td>\n",
+       "      <td>Emmy</td>\n",
+       "      <td>Morin</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>at582</td>\n",
+       "      <td>1572</td>\n",
+       "      <td>atrani@live.com</td>\n",
+       "      <td>Armonda</td>\n",
+       "      <td>Trani</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>id772</td>\n",
+       "      <td>1911</td>\n",
+       "      <td>iduke@outlook.com</td>\n",
+       "      <td>Ilana</td>\n",
+       "      <td>Duke</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>lw275</td>\n",
+       "      <td>65</td>\n",
+       "      <td>lwright@live.com</td>\n",
+       "      <td>Leigha</td>\n",
+       "      <td>Wright</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  backer_id  cf_id                  email first_name last_name\n",
+       "0     av166    968      avincent@live.com     Angelo   Vincent\n",
+       "1     ha127    563     harnold@yandex.com     Hubert    Arnold\n",
+       "2     lg794     65     lgoulet@yandex.com      Loris    Goulet\n",
+       "3     tb566    563  tbrunelli@outlook.com    Teodora  Brunelli\n",
+       "4     lh506    563         lhunt@live.com      Lexie      Hunt\n",
+       "5     lh382    563        lhuber@live.com    Lambert     Huber\n",
+       "6     em444    563        emorin@live.com       Emmy     Morin\n",
+       "7     at582   1572        atrani@live.com    Armonda     Trani\n",
+       "8     id772   1911      iduke@outlook.com      Ilana      Duke\n",
+       "9     lw275     65       lwright@live.com     Leigha    Wright"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#  Drop the name column\n",
-    "\n",
-    "\n",
-    "# Reorder the columns\n"
+    "backers_df_clean = backers_df.drop(['name'], axis=1)\n",
+    "backers_df_clean.head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>backer_id</th>\n",
+       "      <th>cf_id</th>\n",
+       "      <th>first_name</th>\n",
+       "      <th>last_name</th>\n",
+       "      <th>email</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>av166</td>\n",
+       "      <td>968</td>\n",
+       "      <td>Angelo</td>\n",
+       "      <td>Vincent</td>\n",
+       "      <td>avincent@live.com</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>ha127</td>\n",
+       "      <td>563</td>\n",
+       "      <td>Hubert</td>\n",
+       "      <td>Arnold</td>\n",
+       "      <td>harnold@yandex.com</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>lg794</td>\n",
+       "      <td>65</td>\n",
+       "      <td>Loris</td>\n",
+       "      <td>Goulet</td>\n",
+       "      <td>lgoulet@yandex.com</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>tb566</td>\n",
+       "      <td>563</td>\n",
+       "      <td>Teodora</td>\n",
+       "      <td>Brunelli</td>\n",
+       "      <td>tbrunelli@outlook.com</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>lh506</td>\n",
+       "      <td>563</td>\n",
+       "      <td>Lexie</td>\n",
+       "      <td>Hunt</td>\n",
+       "      <td>lhunt@live.com</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  backer_id  cf_id first_name last_name                  email\n",
+       "0     av166    968     Angelo   Vincent      avincent@live.com\n",
+       "1     ha127    563     Hubert    Arnold     harnold@yandex.com\n",
+       "2     lg794     65      Loris    Goulet     lgoulet@yandex.com\n",
+       "3     tb566    563    Teodora  Brunelli  tbrunelli@outlook.com\n",
+       "4     lh506    563      Lexie      Hunt         lhunt@live.com"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Reorder the columns\n",
+    "backers_df_clean = backers_df_clean[[\"backer_id\", \"cf_id\", \"first_name\", \"last_name\", \"email\"]]\n",
+    "backers_df_clean.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Export the DataFrame as a CSV file using encoding='utf8'.\n"
+    "# Export the DataFrame as a CSV file using encoding='utf8'.\n",
+    "backers_df_clean.to_csv(\"backers.csv\", index=False, encoding=\"utf8\")"
    ]
   },
   {
